tests/docker/agentgateway.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayParameters
metadata:
  name: agentgateway-proxy
  namespace: agentgateway-system
spec:
  deployment:
    spec:
      replicas: 1
      template:
        metadata:
          labels:
            app: agentgateway
  logging:
    format: json
  service:
    spec:
      type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentgateway-proxy
  namespace: agentgateway-system
spec:
  gatewayClassName: agentgateway
  infrastructure:
    parametersRef:
      group: agentgateway.dev
      kind: AgentgatewayParameters
      name: agentgateway-proxy
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: agentgateway
  namespace: istio-test
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: agentgateway-system
  to:
    - group: ""
      kind: Service
      name: istio-test
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-backend
  namespace: agentgateway-system
spec:
  hostnames:
    - dev.localhost
  parentRefs:
    - name: agentgateway-proxy
  rules:
    - backendRefs:
        - kind: Service
          name: istio-test
          namespace: istio-test
          port: 8080
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /istio-test
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /agentgateway-test
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-ingress
  namespace: agentgateway-system
spec:
  hostnames:
    - dev.localhost
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  rules:
    - backendRefs:
        - name: agentgateway-proxy
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /agentgateway-test
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: agentgateway-authentik
  namespace: istio-ingress
spec:
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - dev.localhost
            notPaths:
              - /agentgateway-test/health
              - /agentgateway-test/metadata/*
            paths:
              - /agentgateway-test
              - /agentgateway-test/*
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
